# monotonic

./: Cargo.toml
monotonic/: Cargo.toml
monotonic/src/: lib.rs
src/: main.rs
